@@ -14,3 +14,7 @@ Wed Oct 10 15:07:17 2001                        Michael Jennings (mej)
 
 Fixes to make imgtool work properly.
 ----------------------------------------------------------------------
+Sun Nov  4 12:40:34 2001                        Michael Jennings (mej)
+
+Fixes for mediatool and friends.
+----------------------------------------------------------------------
